--- a/option4/css/style.css
+++ b/option4/css/style.css
@@ -1,9 +1,3 @@
-/*!
- * Start Bootstrap - Agency Bootstrap Theme (http://startbootstrap.com)
- * Code licensed under the Apache License v2.0.
- * For details, see http://www.apache.org/licenses/LICENSE-2.0.
- */
-
 body {
     overflow-x: hidden;
     font-family: "Roboto Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
@@ -14,7 +8,7 @@ body {
 }
 
 .text-primary {
-    color: #fed136;
+    color: #04AD9F;
 }
 
 p {
@@ -35,14 +29,14 @@ a.active {
 }
 
 a {
-    color: #fed136;
+    color: #04AD9F;
 }
 
 a:hover,
 a:focus,
 a:active,
 a.active {
-    color: #fec503;
+    color: #04AD9F;
 }
 
 h1,
@@ -69,12 +63,12 @@ h6 {
 }
 
 .btn-primary {
-    border-color: #fed136;
+    border-color: #0FF1DE;
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 700;
     color: #fff;
-    background-color: #fed136;
+    background-color: #04AD9F;
 }
 
 .btn-primary:hover,
@@ -82,9 +76,9 @@ h6 {
 .btn-primary:active,
 .btn-primary.active,
 .open .dropdown-toggle.btn-primary {
-    border-color: #f6bf01;
+    border-color: #0FF1DE;
     color: #fff;
-    background-color: #fec503;
+    background-color: #04AD9F;
 }
 
 .btn-primary:active,
@@ -108,25 +102,25 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-    border-color: #fed136;
-    background-color: #fed136;
+    border-color: #0FF1DE;
+    background-color: #04AD9F;
 }
 
 .btn-primary .badge {
-    color: #fed136;
+    color: #04AD9F;
     background-color: #fff;
 }
 
 .btn-xl {
     padding: 20px 40px;
-    border-color: #fed136;
     border-radius: 3px;
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: 18px;
     font-weight: 700;
+    border-color: #0FF1DE;
     color: #fff;
-    background-color: #fed136;
+    background-color: #04AD9F;
 }
 
 .btn-xl:hover,
@@ -134,9 +128,9 @@ fieldset[disabled] .btn-primary.active {
 .btn-xl:active,
 .btn-xl.active,
 .open .dropdown-toggle.btn-xl {
-    border-color: #f6bf01;
+    border-color: #0FF1DE;
     color: #fff;
-    background-color: #fec503;
+    background-color: #04AD9F;
 }
 
 .btn-xl:active,
@@ -160,12 +154,12 @@ fieldset[disabled] .btn-xl:active,
 .btn-xl.disabled.active,
 .btn-xl[disabled].active,
 fieldset[disabled] .btn-xl.active {
-    border-color: #fed136;
-    background-color: #fed136;
+    border-color: #0FF1DE;
+    background-color: #04AD9F;
 }
 
 .btn-xl .badge {
-    color: #fed136;
+    color: #04AD9F;
     background-color: #fff;
 }
 
@@ -176,14 +170,14 @@ fieldset[disabled] .btn-xl.active {
 
 .navbar-default .navbar-brand {
     font-family: "Kaushan Script","Helvetica Neue",Helvetica,Arial,cursive;
-    color: #fed136;
+    color: #04AD9F;
 }
 
 .navbar-default .navbar-brand:hover,
 .navbar-default .navbar-brand:focus,
 .navbar-default .navbar-brand:active,
 .navbar-default .navbar-brand.active {
-    color: #fec503;
+    color: #04AD9F;
 }
 
 .navbar-default .navbar-collapse {
@@ -191,8 +185,8 @@ fieldset[disabled] .btn-xl.active {
 }
 
 .navbar-default .navbar-toggle {
-    border-color: #fed136;
-    background-color: #fed136;
+    border-color: #04AD9F;
+    background-color: #04AD9F;
 }
 
 .navbar-default .navbar-toggle .icon-bar {
@@ -201,7 +195,7 @@ fieldset[disabled] .btn-xl.active {
 
 .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:focus {
-    background-color: #fed136;
+    background-color: #04AD9F;
 }
 
 .navbar-default .nav li a {
@@ -215,19 +209,19 @@ fieldset[disabled] .btn-xl.active {
 .navbar-default .nav li a:hover,
 .navbar-default .nav li a:focus {
     outline: 0;
-    color: #fed136;
+    color: #04AD9F;
 }
 
 .navbar-default .navbar-nav>.active>a {
     border-radius: 0;
     color: #fff;
-    background-color: #fed136;
+    background-color: #04AD9F;
 }
 
 .navbar-default .navbar-nav>.active>a:hover,
 .navbar-default .navbar-nav>.active>a:focus {
     color: #fff;
-    background-color: #fec503;
+    background-color: #04AD9F;/*#fec503;*/
 }
 
 @media(min-width:768px) {
@@ -265,7 +259,7 @@ header {
     text-align: center;
     color: #fff;
     background-attachment: scroll;
-    background-image: url(../img/header-bg.jpg);
+    background-image: url(../img/header.jpg);
     background-position: center center;
     background-repeat: none;
     -webkit-background-size: cover;
@@ -297,6 +291,10 @@ header .intro-text .intro-heading {
 }
 
 @media(min-width:768px) {
+    header {
+        min-height: 100%;
+    }
+
     header .intro-text {
         padding-top: 300px;
         padding-bottom: 200px;
@@ -339,45 +337,74 @@ section h3.section-subheading {
     font-weight: 400;
 }
 
+#map {
+    display: block;
+    height: 100%;
+    margin: 0 5%;
+    box-shadow: inset 0 0 0 16px rgba(0, 0, 0, 0.3);
+    border-radius: 50%;
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-position: center center;
+    /* -webkit-transition: all 0.4s linear; */
+    -moz-transition: all 0.4s linear;
+    -o-transition: all 0.4s linear;
+    -ms-transition: all 0.4s linear;
+    transition: all 0.4s linear;
+    -webkit-transform-origin: 50% 0%;
+    -moz-transform-origin: 50% 0%;
+    -o-transform-origin: 50% 0%;
+    -ms-transform-origin: 50% 0%;
+    transform-origin: 50% 0%;
+}
+
+#mapDiv {
+  height: 400px;
+  width: 100%;
+  padding-bottom: 5%;
+}
 @media(min-width:768px) {
     section {
         padding: 150px 0;
     }
 }
 
-.service-heading {
+.expertise-heading {
     margin: 15px 0;
     text-transform: none;
 }
 
-#portfolio .portfolio-item {
+#project .portfolio-item {
     right: 0;
     margin: 0 0 15px;
 }
 
-#portfolio .portfolio-item .portfolio-link {
+#project .portfolio-item .portfolio-link {
     display: block;
     position: relative;
     margin: 0 auto;
     max-width: 400px;
 }
 
-#portfolio .portfolio-item .portfolio-link .portfolio-hover {
+#project .portfolio-item .portfolio-link .portfolio-hover {
     position: absolute;
     width: 100%;
     height: 100%;
     opacity: 0;
-    background: rgba(254,209,54,.9);
+    background: rgba(17, 218, 190, 0.7);.
     -webkit-transition: all ease .5s;
     -moz-transition: all ease .5s;
     transition: all ease .5s;
 }
 
-#portfolio .portfolio-item .portfolio-link .portfolio-hover:hover {
+#project .portfolio-item .portfolio-link .portfolio-hover:hover {
     opacity: 1;
 }
 
-#portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content {
+#project .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content {
     position: absolute;
     top: 50%;
     width: 100%;
@@ -388,16 +415,16 @@ section h3.section-subheading {
     color: #fff;
 }
 
-#portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content i {
+#project .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content i {
     margin-top: -12px;
 }
 
-#portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content h3,
-#portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content h4 {
+#project .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content h3,
+#project .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content h4 {
     margin: 0;
 }
 
-#portfolio .portfolio-item .portfolio-caption {
+#project .portfolio-item .portfolio-caption {
     margin: 0 auto;
     padding: 25px;
     max-width: 400px;
@@ -405,24 +432,24 @@ section h3.section-subheading {
     background-color: #fff;
 }
 
-#portfolio .portfolio-item .portfolio-caption h4 {
+#project .portfolio-item .portfolio-caption h4 {
     margin: 0;
     text-transform: none;
 }
 
-#portfolio .portfolio-item .portfolio-caption p {
+#project .portfolio-item .portfolio-caption p {
     margin: 0;
     font-family: "Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: 16px;
     font-style: italic;
 }
 
-#portfolio * {
+#project * {
     z-index: 2;
 }
 
 @media(min-width:767px) {
-    #portfolio .portfolio-item {
+    #project .portfolio-item {
         margin: 0 0 30px;
     }
 }
@@ -493,7 +520,7 @@ section h3.section-subheading {
     border-radius: 100%;
     text-align: center;
     color: #fff;
-    background-color: #fed136;
+    background-color: #04AD9F;
 }
 
 .timeline>li .timeline-image h4 {
@@ -647,7 +674,7 @@ section h3.section-subheading {
     margin-top: 0;
 }
 
-aside.clients img {
+aside.technologies img {
     margin: 50px auto;
 }
 
@@ -680,7 +707,7 @@ section#contact .form-group textarea.form-control {
 }
 
 section#contact .form-control:focus {
-    border-color: #fed136;
+    border-color: #04AD9F;
     box-shadow: none;
 }
 
@@ -758,7 +785,7 @@ ul.social-buttons li a {
 ul.social-buttons li a:hover,
 ul.social-buttons li a:focus,
 ul.social-buttons li a:active {
-    background-color: #fed136;
+    background-color: #04AD9F;
 }
 
 .btn:focus,
@@ -846,12 +873,12 @@ ul.social-buttons li a:active {
 
 ::-moz-selection {
     text-shadow: none;
-    background: #fed136;
+    background: #04AD9F;
 }
 
 ::selection {
     text-shadow: none;
-    background: #fed136;
+    background: #04AD9F;
 }
 
 img::selection {
@@ -863,5 +890,5 @@ img::-moz-selection {
 }
 
 body {
-    webkit-tap-highlight-color: #fed136;
+    webkit-tap-highlight-color: #04AD9F;
 }
