--- a/css/style.css
+++ b/css/style.css
@@ -213,15 +213,16 @@ fieldset[disabled] .btn-xl.active {
 }
 
 .navbar-default .navbar-nav>.active>a {
-    border-radius: 0;
     color: #fff;
-    background-color: #04AD9F;
+    background-color: #222222;
+    border-bottom: 2px solid #04AD9F;
 }
 
 .navbar-default .navbar-nav>.active>a:hover,
 .navbar-default .navbar-nav>.active>a:focus {
     color: #fff;
-    background-color: #04AD9F;/*#fec503;*/
+    background-color: #222222;
+    border-bottom: 2px solid #04AD9F;
 }
 
 @media(min-width:768px) {
