--- a/css/style.css
+++ b/css/style.css
@@ -164,8 +164,8 @@ fieldset[disabled] .btn-xl.active {
 }
 
 .navbar-default {
-    border-color: transparent;
-    background-color: #222;
+   /* border-color: transparent;
+    background-color: #222;*/
 }
 
 .navbar-default .navbar-brand {
@@ -214,22 +214,22 @@ fieldset[disabled] .btn-xl.active {
 
 .navbar-default .navbar-nav>.active>a {
     color: #fff;
-    background-color: #222222;
+    background-color: rgba(4, 4, 4, 0.15);
     border-bottom: 2px solid #04AD9F;
 }
 
 .navbar-default .navbar-nav>.active>a:hover,
 .navbar-default .navbar-nav>.active>a:focus {
     color: #fff;
-    background-color: #222222;
+    background-color: rgba(4, 4, 4, 0.15);
     border-bottom: 2px solid #04AD9F;
 }
 
 @media(min-width:768px) {
     .navbar-default {
-        padding: 25px 0;
+        padding: 5px 0;
         border: 0;
-        background-color: transparent;
+        background-color: rgba(4, 4, 4, 0.76);
         -webkit-transition: padding .3s;
         -moz-transition: padding .3s;
         transition: padding .3s;
@@ -240,15 +240,16 @@ fieldset[disabled] .btn-xl.active {
         -webkit-transition: all .3s;
         -moz-transition: all .3s;
         transition: all .3s;
-    }
+    } 
 
     .navbar-default .navbar-nav>.active>a {
         border-radius: 3px;
     }
 
     .navbar-default.navbar-shrink {
-        padding: 10px 0;
-        background-color: #222;
+        padding: 5px 0;
+        background-color: rgba(4, 4, 4, 0.76);
+        border-radius: 3px;
     }
 
     .navbar-default.navbar-shrink .navbar-brand {
@@ -341,16 +342,17 @@ section h3.section-subheading {
 #map {
     width: 100%;
     height: 100%;
-    /*display: block;
+   /* display: block;
     height: 100%;
     margin: 0 5%;
     box-shadow: inset 0 0 0 16px rgba(0, 0, 0, 0.3);
     border-radius: 50%;
     display: block;
     position: absolute;
+    
     border-radius: 50%;
     background-position: center center;
-    /* -webkit-transition: all 0.4s linear; 
+     -webkit-transition: all 0.4s linear; 
     -moz-transition: all 0.4s linear;
     -o-transition: all 0.4s linear;
     -ms-transition: all 0.4s linear;
