--- a/css/style.css
+++ b/css/style.css
@@ -227,7 +227,7 @@ fieldset[disabled] .btn-xl.active {
 
 @media(min-width:768px) {
     .navbar-default {
-        padding: 5px 0;
+        /*padding: 5px 0;*/
         border: 0;
         background-color: rgba(4, 4, 4, 0.76);
         -webkit-transition: padding .3s;
@@ -342,30 +342,10 @@ section h3.section-subheading {
 #map {
     width: 100%;
     height: 100%;
-   /* display: block;
-    height: 100%;
-    margin: 0 5%;
-    box-shadow: inset 0 0 0 16px rgba(0, 0, 0, 0.3);
-    border-radius: 50%;
-    display: block;
-    position: absolute;
-    
-    border-radius: 50%;
-    background-position: center center;
-     -webkit-transition: all 0.4s linear; 
-    -moz-transition: all 0.4s linear;
-    -o-transition: all 0.4s linear;
-    -ms-transition: all 0.4s linear;
-    transition: all 0.4s linear;
-    -webkit-transform-origin: 50% 0%;
-    -moz-transform-origin: 50% 0%;
-    -o-transform-origin: 50% 0%;
-    -ms-transform-origin: 50% 0%;
-    transform-origin: 50% 0%;*/
 }
 
 #mapDiv {
-  height: 400px;
+  height: 500px;
   width: 100%;
   padding-bottom: 5%;
 }
@@ -682,10 +662,7 @@ aside.technologies img {
 }
 
 section#contact {
-    background-color: #222;
-    background-image: url(../img/map-image.png);
-    background-position: center;
-    background-repeat: no-repeat;
+    padding: 10px 0;
 }
 
 section#contact .section-heading {
