--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 .text-primary {
-    color: #04AD9F;
+    color: #9d7ca2; //#04AD9F;
 }
 
 p {
@@ -29,14 +29,14 @@ a.active {
 }
 
 a {
-    color: #04AD9F;
+    color: #9d7ca2; //#04AD9F;
 }
 
 a:hover,
 a:focus,
 a:active,
 a.active {
-    color: #04AD9F;
+    color: #9d7ca2; //#04AD9F;
 }
 
 h1,
@@ -63,12 +63,12 @@ h6 {
 }
 
 .btn-primary {
-    border-color: #0FF1DE;
+    border-color: #5b046e;// #0FF1DE;
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 700;
     color: #fff;
-    background-color: #04AD9F;
+    background-color: #9d7ca2; //#04AD9F;
 }
 
 .btn-primary:hover,
@@ -76,9 +76,9 @@ h6 {
 .btn-primary:active,
 .btn-primary.active,
 .open .dropdown-toggle.btn-primary {
-    border-color: #0FF1DE;
+    border-color: #5b046e;// #0FF1DE;
     color: #fff;
-    background-color: #04AD9F;
+    background-color: #9d7ca2; // #04AD9F;
 }
 
 .btn-primary:active,
@@ -102,12 +102,12 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-    border-color: #0FF1DE;
-    background-color: #04AD9F;
+    border-color: #5b046e;// #0FF1DE;
+    background-color: #9d7ca2; //#04AD9F;
 }
 
 .btn-primary .badge {
-    color: #04AD9F;
+    color: #9d7ca2; //#04AD9F;
     background-color: #fff;
 }
 
@@ -118,9 +118,9 @@ fieldset[disabled] .btn-primary.active {
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: 18px;
     font-weight: 700;
-    border-color: #0FF1DE;
+    border-color: #5b046e;// #0FF1DE;
     color: #fff;
-    background-color: #04AD9F;
+    background-color: #9d7ca2; //#04AD9F;
 }
 
 .btn-xl:hover,
@@ -128,9 +128,9 @@ fieldset[disabled] .btn-primary.active {
 .btn-xl:active,
 .btn-xl.active,
 .open .dropdown-toggle.btn-xl {
-    border-color: #0FF1DE;
+    border-color: #5b046e;// #0FF1DE;
     color: #fff;
-    background-color: #04AD9F;
+    background-color: #9d7ca2; //#04AD9F;
 }
 
 .btn-xl:active,
@@ -154,12 +154,12 @@ fieldset[disabled] .btn-xl:active,
 .btn-xl.disabled.active,
 .btn-xl[disabled].active,
 fieldset[disabled] .btn-xl.active {
-    border-color: #0FF1DE;
-    background-color: #04AD9F;
+    border-color:#5b046e;// #0FF1DE;
+    background-color: #9d7ca2; //#04AD9F;
 }
 
 .btn-xl .badge {
-    color: #04AD9F;
+    color: #9d7ca2; //#04AD9F;
     background-color: #fff;
 }
 
@@ -170,14 +170,14 @@ fieldset[disabled] .btn-xl.active {
 
 .navbar-default .navbar-brand {
     font-family: "Kaushan Script","Helvetica Neue",Helvetica,Arial,cursive;
-    color: #04AD9F;
+    color: #9d7ca2; //#04AD9F;
 }
 
 .navbar-default .navbar-brand:hover,
 .navbar-default .navbar-brand:focus,
 .navbar-default .navbar-brand:active,
 .navbar-default .navbar-brand.active {
-    color: #04AD9F;
+    color: #9d7ca2; //#04AD9F;
 }
 
 .navbar-default .navbar-collapse {
@@ -185,8 +185,8 @@ fieldset[disabled] .btn-xl.active {
 }
 
 .navbar-default .navbar-toggle {
-    border-color: #04AD9F;
-    background-color: #04AD9F;
+    border-color: #9d7ca2; //#04AD9F;
+    background-color: #9d7ca2; //#04AD9F;
 }
 
 .navbar-default .navbar-toggle .icon-bar {
@@ -195,7 +195,7 @@ fieldset[disabled] .btn-xl.active {
 
 .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:focus {
-    background-color: #04AD9F;
+    background-color: #9d7ca2; //#04AD9F;
 }
 
 .navbar-default .nav li a {
@@ -209,20 +209,20 @@ fieldset[disabled] .btn-xl.active {
 .navbar-default .nav li a:hover,
 .navbar-default .nav li a:focus {
     outline: 0;
-    color: #04AD9F;
+    color: #9d7ca2; //#04AD9F;
 }
 
 .navbar-default .navbar-nav>.active>a {
     color: #fff;
     background-color: rgba(4, 4, 4, 0.15);
-    border-bottom: 2px solid #04AD9F;
+    border-bottom: 2px solid #9d7ca2; //#04AD9F;
 }
 
 .navbar-default .navbar-nav>.active>a:hover,
 .navbar-default .navbar-nav>.active>a:focus {
     color: #fff;
     background-color: rgba(4, 4, 4, 0.15);
-    border-bottom: 2px solid #04AD9F;
+    border-bottom: 2px solid #9d7ca2; //#04AD9F;
 }
 
 @media(min-width:768px) {
@@ -377,7 +377,7 @@ section h3.section-subheading {
     width: 100%;
     height: 100%;
     opacity: 0;
-    background: rgba(17, 218, 190, 0.7);.
+    background: rgba(91, 4, 110, 1);.
     -webkit-transition: all ease .5s;
     -moz-transition: all ease .5s;
     transition: all ease .5s;
@@ -503,7 +503,7 @@ section h3.section-subheading {
     border-radius: 100%;
     text-align: center;
     color: #fff;
-    background-color: #04AD9F;
+    background-color: #9d7ca2; //#04AD9F;
 }
 
 .timeline>li .timeline-image h4 {
@@ -687,7 +687,7 @@ section#contact .form-group textarea.form-control {
 }
 
 section#contact .form-control:focus {
-    border-color: #04AD9F;
+    border-color: #9d7ca2; //#04AD9F;
     box-shadow: none;
 }
 
@@ -765,7 +765,7 @@ ul.social-buttons li a {
 ul.social-buttons li a:hover,
 ul.social-buttons li a:focus,
 ul.social-buttons li a:active {
-    background-color: #04AD9F;
+    background-color: #9d7ca2; //#04AD9F;
 }
 
 .btn:focus,
@@ -853,12 +853,12 @@ ul.social-buttons li a:active {
 
 ::-moz-selection {
     text-shadow: none;
-    background: #04AD9F;
+    background: #9d7ca2; //#04AD9F;
 }
 
 ::selection {
     text-shadow: none;
-    background: #04AD9F;
+    background: #9d7ca2; //#04AD9F;
 }
 
 img::selection {
@@ -870,5 +870,5 @@ img::-moz-selection {
 }
 
 body {
-    webkit-tap-highlight-color: #04AD9F;
+    webkit-tap-highlight-color: #9d7ca2; //#04AD9F;
 }
